# cmsis-pi-rp2040

./: CMakeLists.txt  README.md  env  main.c  rp2040.svd
CMSIS/: CMakeLists.txt
CMSIS/Device/Raspberry/RP2XXX/: CMakeLists.txt
CMSIS/Device/Raspberry/RP2XXX/Drivers/: Driver_SPI.c  Driver_USART.c
CMSIS/Device/Raspberry/RP2XXX/Include/: RP2040.h  RP20xx.h  dma.h  gpio.h  gpio_fs.h  pio.h  pio_encoder.h
CMSIS/Device/Raspberry/RP2XXX/Source/: dma.c  gpio.c  pio.c  system_RP2040.c
CMSIS/Device/Raspberry/RP2XXX/Source/boot_stage2/: CMakeLists.txt  boot_stage2.c  boot_stage2.ld  boot_stage2_generic.c  pad_checksum
